--- a/app/clientes/templates/clientes/detalhe.html
+++ b/app/clientes/templates/clientes/detalhe.html
@@ -430,9 +430,9 @@
                                     Atualizar
                                 </button>
                                 {% if c.arquivo_storage_key %}
-                                    <a href="{{ url_for('certidoes.baixar_arquivo', certidao_id=c.id) }}"
-                                       class="btn btn-sm btn-outline-success">
-                                        PDF
+                                    <a href="{{ url_for('certidoes.baixar_certidao', certidao_id=c.id) }}"
+                                       class="btn btn-sm btn-outline-success me-1">
+                                        <i class="fas fa-download me-1"></i> Abrir
                                     </a>
                                 {% endif %}
                             </td>
@@ -453,8 +453,8 @@
               <div class="modal-dialog modal-dialog-centered">
                 <div class="modal-content border-0 shadow">
                   <form method="post"
-                        action="{{ url_for('certidoes.atualizar_certidao', certidao_id=c.id) }}"
-                        enctype="multipart/form-data">
+                        action="{{ url_for('certidoes.gerar_certidao', certidao_id=c.id) }}"
+                        class="d-inline">
                     <div class="modal-header bg-light">
                       <h5 class="modal-title" id="modalCertidaoLabel{{ c.id }}">
                         <i class="fas fa-file-signature me-2"></i>
